refactored code in all components

--- a/src/components/BookList/BookList.css
+++ b/src/components/BookList/BookList.css
@@ -1,6 +1,9 @@
 /* overall */
 /* ************************ */
 
+.error {
+  text-align: center;
+}
 .media img {
   border: 1px solid rgb(175, 175, 175);
 }
@@ -36,6 +39,9 @@ h4:hover {
 .media-body a:hover {
   text-decoration: none;
 }
+.mrr-subtle {
+  color: rgb(175, 175, 175);
+}
 
 /* search-results */
 /* ************************ */
@@ -62,5 +68,62 @@ h4:hover {
 @media (min-width: 768px) {
   .my-books img {
     width: 120px;
+  }
+}
+
+/* book-details */
+/* ************************ */
+
+.book-details img {
+  width: 68px;
+}
+.book-details h2 {
+  text-align: left;
+  font-weight: 300;
+}
+.details {
+  display: flex;
+  align-content: flex-start;
+}
+.details p, .details a {
+  color: rgb(175, 175, 175);
+  padding: 0 10px;
+  margin-bottom: 0;
+  border-left: 1px solid rgb(175, 175, 175);
+}
+.details p:first-child {
+  padding-left: 0;
+  border-left: 0 solid rgb(175, 175, 175);
+}
+.details a p {
+  color: rgb(182, 90, 39);
+}
+.details a p:hover {
+  color: rgb(136, 66, 26);
+}
+.thumb-group p {
+  font-size: 90%;
+  margin: 8px auto 0;
+  max-width: 68px;
+}
+@media (min-width: 576px) {
+  .book-details img {
+    width: 90px;
+  }
+  .thumb-group p {
+    max-width: 90px;
+  }
+}
+@media (min-width: 768px) {
+  .book-details img {
+    width: 120px;
+  }
+  .thumb-group p {
+    max-width: 160px;
+  }
+}
+@media (min-width: 992px) {
+  .book-details img {
+    width: 154px;
   }
 }
