--- a/src/components/MyBooks/MyBooks.css
+++ b/src/components/MyBooks/MyBooks.css
@@ -1,4 +1,4 @@
-section p:first-child {
+.my-books > section p:first-child {
   color: rgb(182, 90, 39);
   font-weight: 500;
   text-align: center;
