--- a/src/components/BookDetails/BookDetails.css
+++ b/src/components/BookDetails/BookDetails.css
@@ -3,3 +3,12 @@
   font-weight: 500;
   text-align: center;
 }
+.error a {
+  color: rgb(182, 90, 39);
+  text-align: center;
+  text-decoration: underline;
+  text-decoration-color: rgb(182, 90, 39);
+}
+.error a:hover {
+  color: rgb(136, 66, 26);
+}
