--- a/src/components/BookList/BookList.css
+++ b/src/components/BookList/BookList.css
@@ -4,6 +4,11 @@
 .error {
   text-align: center;
 }
+.no-image {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
 .media img {
   border: 1px solid rgb(175, 175, 175);
 }
@@ -18,6 +23,9 @@
 .panel-empty p {
   text-align: center;
   margin-bottom: 0;
+}
+.media {
+  position: relative;
 }
 .media > a {
   background-color: #000;
@@ -101,7 +109,22 @@ h4:hover {
 .details a p:hover {
   color: rgb(136, 66, 26);
 }
+.thumb-group, .thumb-group-alt {
+  position: relative;
+}
+.thumb-group, .thumb-group-alt div {
+  position: absolute;
+  left: 50%;
+}
+.thumb-group-alt p {
+  position: relative;
+  left: -50%;
+  top: -120px;
+}
 .thumb-group p {
+  position: relative;
+  left: -50%;
+  top: -120px;
   font-size: 90%;
   margin: 8px auto 0;
   max-width: 68px;
